# wasmer-template-renderer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  config.json  netlify.sh  netlify.toml  package-lock.json  package.json
functions/: test.js
functions/test/: test.js
integrations/csharp/: .gitignore
integrations/csharp/Example/: Example.csproj  Program.cs
integrations/java/: .gitignore  build.gradle
integrations/java/src/main/java/demo/: HelloGradle.java
integrations/java/src/main/java/example/: Example.java
integrations/java/src/main/java/wasmhandlebars/: Test.java  WasmHandlebars.java
integrations/js/: .babelrc  package-lock.json  package.json  webpack.config.js
integrations/js/netlify/functions/: test.js
integrations/js/node/: example.js  index.js  test.js
integrations/js/shared/: template-renderer.js  wasm-handlebars.js
integrations/js/web/: example.js  index.html
integrations/php/: RenderExample.php  WasmHandlebars.php  composer.json  example.php  test.php
integrations/python/: example.py  main.py  test.py  wasm_handlebars.py
integrations/rust/: Cargo.toml
integrations/rust/src/: main.rs  wasm_handlebars.rs
integrations/shared/: blog.hbs  post.hbs  post.json
integrations/shared/hbs/: blog.hbs  post.hbs
integrations/shared/json/: data.json
output/js/: post.html
src/: lib.rs  renderer.rs
