[package]
name = "wasmer-template-renderer"
version = "0.1.0"
authors = ["arashpaknezad"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "3.5.0"
serde_json = "1.0"
mut_static = "5.0.0"
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib"]